--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -7,19 +7,19 @@
     <div class="modal-dialog bg-dark">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">@(newMode ? "New Job Details" : "Update Connections Strings")</h4>
+                <h4 class="modal-title">@(NewMode ? "New Job Details" : "Update Connections Strings")</h4>
                 <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button>
             </div>
             <div class="modal-body">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" id="name" class="form-control" disabled="@(!newMode)" @bind="name" />
+                    <input type="text" id="name" class="form-control" disabled="@(!NewMode)" @bind="name" />
                 </div>
-                @if (newMode)
+                @if (NewMode)
                 {
                     <div class="mb-3">
-                        <label for="mongo-options">Data Migration Tool:</label>
-                        <select id="mongo-options" @onchange="OnSelectionChanged">
+                        <label for="mongo-options" class="form-label">Migration Tool:</label>
+                        <select id="mongo-options" class="form-select" @onchange="OnSelectionChanged">
                             @if (AllowMongoDump)
                             {
                                 <option value="Use MongoDump and MongoRestore">Use MongoDump and MongoRestore</option>
@@ -27,54 +27,63 @@
                             <option value="Use Mongo Driver">Use Mongo Driver</option>
                         </select>
                     </div>
-                }
-                <div class="mb-3 checkbox-container">
-                    <div class="checkbox-group">
-                        <label title="Enables online migration, allowing live data replication during the process.">
-                            <input type="checkbox" id="isOnline" disabled="@(!newMode)" @bind="isOnline" />
-                            Online Migration
-                        </label>
-                    </div>
-                    <div class="checkbox-group">                    
-                        <label title="Enable syncing back to the source after migration. Helps reduce risk by allowing a rollback to the original server if needed.">
-                            <input type="checkbox" id="enableSyncBack" disabled="@(!newMode || !isOnline)" @bind="enableSyncBack" />
-                            Post Migration Sync Back
-                        </label>
-                    </div>
-                </div>
+                }                
                 <div class="mb-3 checkbox-container">
                     <div class="checkbox-group">
                         <label title="Keep the target collection and append new data without deleting existing records.">
-                            <input type="checkbox" id="appendMode" disabled="@(!newMode)" @bind="appendMode" />
+                            <input type="checkbox" id="appendMode" disabled="@(!NewMode)" @bind="appendMode" />
                             Append Mode
                         </label>
                     </div>
                     <div class="checkbox-group">                    
                         <label title="Skip copying indexes from the source; only data will be migrated.">
-                            <input type="checkbox" id="copyIndex" disabled="@(!newMode || appendMode)" @bind="skipIndexes" />
+                            <input type="checkbox" id="copyIndex" disabled="@(!NewMode || appendMode)" @bind="skipIndexes" />
                             Skip Indexes
                         </label>
                     </div>
                 </div>
-
+                <div class="mb-3">
+                    <label for="migration-mode" class="form-label" title="Online migration allows live data replication during the process.">
+                        Migration Mode:
+                    </label>                
+                    <select id="migration-mode" class="form-select" @onchange="OnModeSelectionChanged" disabled="@(!NewMode)">
+                        <option value="Offline">Offline</option>
+                        <option value="Online">Online</option>
+                    </select>
+                </div>
+                <div class="mb-3 checkbox-container">
+                    <div class="checkbox-group">
+                        <label title="Begin change stream processing once all collections are processed.">
+                            <input type="checkbox" id="startCSAfterUploads" disabled="@(!NewMode || !isOnline)" @bind="startCSAfterUploads" />
+                            Delay Change Stream
+                        </label>
+                    </div>
+                    <div class="checkbox-group">
+                        <label title="Enable syncing back to the source after migration. Helps reduce risk by allowing a rollback to the original server if needed.">
+                            <input type="checkbox" id="enableSyncBack" disabled="@(!NewMode || !isOnline)" @bind="enableSyncBack" />
+                            Post Migration Sync Back
+                        </label>
+                    </div>
+                </div>
+               
                 <div class="mb-3">
                     <label for="sourceConnectionString" class="form-label">Source Connection String</label>
-                    <input type="password" id="sourceConnectionString" placeholder="@(newMode ? "" : "For " + sourceEndpoint)" class="form-control" @bind="sourceConnectionString" />
+                    <input type="password" id="sourceConnectionString" placeholder="@(NewMode ? "" : "For " + sourceEndpoint)" class="form-control" @bind="sourceConnectionString" />
                 </div>
 
                 <div class="mb-3">
                     <label for="targetConnectionString" class="form-label">Target Connection String</label>
-                    <input type="password" id="targetConnectionString" placeholder="@(newMode ? "For [account name].mongocluster.cosmos.azure.com" : "For " + targetEndpoint)" class="form-control" @bind="targetConnectionString" />
+                    <input type="password" id="targetConnectionString" placeholder="@(NewMode ? "For [account name].mongocluster.cosmos.azure.com" : "For " + targetEndpoint)" class="form-control" @bind="targetConnectionString" />
                 </div>
 
                 <div class="mb-3">
                     <label for="nameSpaces" class="form-label">Collections To Migrate</label>
-                    <textarea id="nameSpaces" disabled="@(!newMode)" rows="4" placeholder="e.g. db1.col1,db1.col2,db2.col1,db2.col5" class="form-control" @bind="namespaces"></textarea>
+                    <textarea id="nameSpaces" disabled="@(!NewMode)" rows="4" placeholder="e.g. db1.col1,db1.col2,db2.col1,db2.col5" class="form-control" @bind="namespaces"></textarea>
                 </div>
 
                 <div class="mb-3">
                     <label for="isSimulatedRun" class="form-label" title="Enable simulated run where no actual writes will occur on the target database.">
-                        <input type="checkbox" id="isSimulatedRun" disabled="@(!newMode)" @bind="isSimulatedRun" />
+                        <input type="checkbox" id="isSimulatedRun" disabled="@(!NewMode)" @bind="isSimulatedRun" />
                         Simulation Mode (No Writes to Target)
                     </label>
                 </div>
@@ -99,14 +108,10 @@
 #pragma warning disable CS8602
 
     [Parameter]
-    public bool newMode { get; set; }
+    public bool NewMode { get; set; }
 
     [Parameter]
     public MigrationJob Job { get; set; }
-
-    public string sourceConnectionString { get; set; } = string.Empty;
-
-    public string targetConnectionString { get; set; } = string.Empty;
 
     [Parameter]
     public EventCallback<MigrationJob> OnSubmit { get; set; }
@@ -121,6 +126,7 @@
     private bool isSimulatedRun = false; // Variable to track the dummy run option
     private bool AllowMongoDump => Configuration.GetValue<bool>("AllowMongoDump");
     private bool isOnline = true; // Default to online migration
+    private bool startCSAfterUploads = true; // Start change streams after all uploads are done
     private bool enableSyncBack = false;// if the migration is online, reverse sync can be enabled
     private bool skipIndexes = false;// create indexes on Target
     private bool appendMode = false;// if the target collection exists, it will be deleted
@@ -128,6 +134,15 @@
     private string name = string.Empty; // Name of the migration job
     private string sourceEndpoint = string.Empty;   // Source endpoint extracted from the connection string
     private string targetEndpoint = string.Empty;   // Target endpoint extracted from the connection string
+
+    private string sourceConnectionString { get; set; } = string.Empty;
+    private string targetConnectionString { get; set; } = string.Empty;
+
+
+    private void OnModeSelectionChanged(ChangeEventArgs e)
+    {
+        isOnline = e.Value.ToString() == "Online";
+    }
 
     private void OnSelectionChanged(ChangeEventArgs e)
     {
@@ -138,7 +153,7 @@
 
     protected override void OnInitialized()
     {
-        if (newMode)
+        if (NewMode)
         {
             name = string.Empty;
             sourceConnectionString = string.Empty;
@@ -160,7 +175,7 @@
             sourceEndpoint = Job.SourceEndpoint;
             targetEndpoint = Job.TargetEndpoint;
             isOnline = Job.IsOnline;
-            enableSyncBack = Job.SyncBankEnabled && isOnline && !Job.IsSimulatedRun; // Reverse sync only if online and not a simulated run
+            enableSyncBack = Job.SyncBackEnabled && isOnline && !Job.IsSimulatedRun; // Reverse sync only if online and not a simulated run
             useMongoDump = Job.UseMongoDump;
             isSimulatedRun = Job.IsSimulatedRun;
             skipIndexes = Job.SkipIndexes;
@@ -175,7 +190,7 @@
             errorMessage = "Name can't be empty.";
             return;
         }
-        if (newMode && CheckNameExists != null) // Ensure callback is provided
+        if (NewMode && CheckNameExists != null) // Ensure callback is provided
         {
             var nameExists = await CheckNameExists(name);
             if (nameExists)
@@ -192,14 +207,14 @@
         }
 
         var tmpSrcEndpoint = Helper.ExtractHost(sourceConnectionString);
-        if (tmpSrcEndpoint != sourceEndpoint && !newMode)
+        if (tmpSrcEndpoint != sourceEndpoint && !NewMode)
         {
             errorMessage = "Source endpoint doesn't match provided Source Connection String.";
             return;
         }
 
         var tmpTgtEndpoint = Helper.ExtractHost(targetConnectionString);
-        if (tmpTgtEndpoint != targetEndpoint && !newMode)
+        if (tmpTgtEndpoint != targetEndpoint && !NewMode)
         {
             errorMessage = "Target endpoint doesn't match provided Target Connection String.";
             return;
@@ -211,7 +226,7 @@
             return;
         }
 
-        if (newMode)
+        if (NewMode)
         {
             var retValue = Helper.ValidateNamespaceFormat(namespaces);
             if (!retValue.Item1)
@@ -239,7 +254,8 @@
             IsSimulatedRun = isSimulatedRun,
             SkipIndexes = skipIndexes,
             AppendMode = appendMode,
-            SyncBankEnabled = (enableSyncBack && isOnline && !isSimulatedRun) ? true : false
+            SyncBackEnabled = (enableSyncBack && isOnline && !isSimulatedRun) ? true : false,
+            CSStartsAfterAllUploads = startCSAfterUploads
         };
         await OnSubmit.InvokeAsync(job);
     }
